# oecd-econoutlook

./: .gitignore  README.md  pyproject.toml  setup_winutils.ps1  uv.toml
output/: data_coverage.md  growth_reconciliation.md  metrics.json  missingness_diagnostics.xlsx  predictions.csv
src/: 01_pull_data.py  02_feature_engineering.py  03_pipeline.py  04_evaluate.py  ar1_robustness.py  data_quality.py  diagnose_missingness.py  diagnose_truncation.py  labels.py  release_calendar.py
src/diagnostics/: ar1_robustness.py  diagnose_missingness.py
src/legacy/: 04_evaluate.py
