[project]
name = "oecd-econoutlook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter",
    "matplotlib>=3.7.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "pyspark>=3.5,<4.0",
    "requests>=2.31.0",
    "seaborn>=0.12.0",
]
